# OppoT2

./: .gitignore  404.html  OppoT2.circ  README.md  index.html  sitemap.xml
OppoT2Assembler/: OppoT2Assembler.sln
OppoT2Assembler/OppoT2Assembler/: Assembler.cs  Helper.cs  ISA.cs  Instruction.cs  OppoT2Assembler.csproj  Program.cs  TokenSorter.cs
OppoT2Disassembler/: CMakeLists.txt  disassembler.c  instruction.c  main.c  memory.c
OppoT2Disassembler/headers/: disassembler.h  instruction.h  memory.h
OppoT2Emu/: Main.c  OppoT2Emu.sln  OppoT2Emu.vcxproj  OppoT2Emu.vcxproj.filters  instruction.h  instructions.c  memory.c  memory.h
OppoT2Emulator/: CMakeLists.txt  emulator.c  instruction.c  instruction.h  keyboard.c  main.c  memory.c  memory.h
OppoT2Emulator/includes/: emulator.h  main.h  memory.h
OppoT2EmulatorGUI/: CMakeLists.txt  colorizer.css  main.c  window.ui
OppoT2EmulatorGUI/emulator/: emulator.c  interface.c  iocontrol.c  memory.c
OppoT2EmulatorGUI/emulator/headers/: emulator.h  interface.h  iocontrol.h  memmap.h
OppoT2EmulatorGUI/headers/: main.h
SyntaxHighlighter/oppot2-asm/: CHANGELOG.md  README.md  language-configuration.json  oppot2-asm-0.0.1.vsix  package.json  vsc-extension-quickstart.md
asm/: HelloWorld.s  asciiPrint.s  index.html  inttest.s  tester.s
cpu/: index.html
cpu/conventions/: index.html
cpu/cpu/: index.html
cpu/instructions/: index.html
cpu/isa/: index.html
miscASM/: asciiPrint.s  tester.s
oppot2-docs/: mkdocs.yml
oppot2-docs/docs/: index.md
oppot2-docs/site/: 404.html  index.html
search/: search_index.json
(+35 files in other folders)
